Jump Start Changelog
====================

2.1.12 - 09/11/2017
-------------------

* **Updated Theme Blvd framework to 2.6.11**
* Fixed: Sticky menu and scroll effects not working in Chrome v61.

--------------------------------------------------------------

2.1.11 - 08/07/2017
-------------------

* **Updated Theme Blvd framework to 2.6.10**
* Fixed: "Iframe" 16:9 lightbox type getting applied where it shouldn't.

--------------------------------------------------------------

2.1.10 - 08/03/2017
-------------------

* **Updated Theme Blvd framework to 2.6.9**
* Fixed: Image `srcset` property not getting printed out when featured image is linked to lightbox.
* Fixed: Minor admin styling issues with WordPress 4.8+.
* Fixed: Minor broken image links in CSS for Executive and Superuser bases.
* Fixed: Ajax errors in some combinations of third-party plugins, WooCommerce, and the theme.
* Fixed: Deprecated notices in theme's "catalog view" display for WooCommerce products.

--------------------------------------------------------------

2.1.9 - 05/31/2017
------------------

* **Updated Theme Blvd framework to 2.6.8**
* New: Added option at *Appearance > Theme Options > Content > Blog Homepage* to set a separate post display for the blog homepage or "posts page."
* Improvement: On pages where where WooCommerce floating cart isn't supported (like checkout and cart page, itself), the cart icon now links to the cart page.
* Fixed: WooCommerce up-sells not showing on product pages (with WooCommerce 3.0+).
* Fixed: Minor WooCommerce HTML5 validation errors (with WooCommerce 3.0+).
* Fixed: Minor PHP warnings and errors on some server configurations.
* Fixed: Italic font style for quotes selected from Typography theme options not applying to quotes overlaid on featured images in Quote format posts.

--------------------------------------------------------------

2.1.8 - 05/08/2017
------------------

* **Updated Theme Blvd framework to 2.6.7**